--- a/index.css
+++ b/index.css
@@ -71,7 +71,6 @@ header {
   justify-content: space-around;
   padding: 20px 0 0 0;
   flex: 0 0 auto;
-  width: 100%;
 }
 .menu {
   display: flex;
@@ -234,8 +233,9 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  position: absolute;
-  bottom: 50px;
+  /* position: absolute; */
+  /* bottom: 50px; */
+  margin: 10% 0 0 0;
   flex: 0 0 auto;
   width: 100%;
 }
@@ -286,6 +286,7 @@ footer div {
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
+  text-align: end;
   margin: 0 80px 0 0;
 }
 .icons {
@@ -357,8 +358,9 @@ footer div {
     display: none;
   }
   footer {
-    margin: 0;
     flex-direction: column;
+    margin: 10% 0 0 0;
+    /* bottom: 50px; */
   }
   .copyright {
     color: #e4e5ea;
