--- a/index.css
+++ b/index.css
@@ -68,9 +68,8 @@ a {
 header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  padding: 20px 0 0 0;
-  flex: 0 0 auto;
+  justify-content: space-between;
+  padding: 20px 10% 0 10%;
 }
 .menu {
   display: flex;
@@ -140,17 +139,15 @@ header {
 }
 
 .main_content {
-  flex: 1 0 auto;
   color: #e4e5ea;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 20px 130px 0 55px;
+  padding: 20px 15% 0 10%;
 }
 .left_cont {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
 }
 
 .small_p {
