--- a/index.css
+++ b/index.css
@@ -1,7 +1,5 @@
 body,
 html {
-  height: 100%;
-  width: 100%;
   background-color: #1e1e1e;
   font-family: "Inter", sans-serif;
   font-style: normal;
@@ -376,6 +374,7 @@ footer div {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
+    text-align: start;
     margin: 0 80px 0 0;
     line-height: 20px;
   }
